# PigeonServer

./: .gitignore  CMakeLists.txt  README.md  ServerCore.cpp  main.cpp
sdk/unity/: .gitignore
sdk/unity/ConsoleTest/: Logger.cs  PigeonApp.cs  Program.cs
sdk/unity/client/: Client.cs  ClientOptions.cs  ObjectManager.cs  PigeonClient.cs  StructSerializer.cs
sdk/unity/client/Interfaces/: ILogger.cs  IObject.cs
sdk/unity/client/Models/: Object.cs  PacketData.cs  PacketHeader.cs
server/: CMakeLists.txt
server/src/: main.cpp
server/src/Core/: ClientSession.h  TcpServer.cpp  TcpServer.h
server/src/Core/Logger/: Logger.cpp
server/src/Core/Packets/: DataManager.h  Packet.cpp  Packet.h
src/: PlayerState.h  ServerCore.cpp  ServerCore.h  main.cpp
src/Core/: Config.cpp  Config.h  TcpServer.cpp  TcpServer.h
src/Core/Logger/: Logger.h
src/Core/Packets/: DataManager.cpp
tests/: rec_test.py  send_test.py
